syntax = "proto3";

option go_package = "github.com/smartin015/peerprint/pubsub/proto";

import "proto/state.proto";

package actions;

message GetStateRequest {}

message GetStateResponse {
  repeated state.SignedGrant grants = 1;
  repeated state.SignedRecord records = 2;
}
